--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <p class="espaniol">asdfjoansdflknasdflaksndflkasndflkansdfdsd</p>
+    <p>a.	Modifica el index.html, añade un párrafo mismo, y añádelo al “stage área”.</p>
+    <p>b.	Vuelve a modificar el index.html, añade otro párrafo y guarda el index.html </p>
+    <p>ejercicio 21</p>
 </body>
 </html>
