--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>a.	Modifica el index.html, añade un párrafo mismo, y añádelo al “stage área”.</p>
     <p>b.	Vuelve a modificar el index.html, añade otro párrafo y guarda el index.html </p>
     <p>ejercicio 21</p>
+    <h1 class="h">Practica 03</h1>
+    <p>hacer un commit para la practica 03</p>
 </body>
 </html>
