--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <p class="espaniol">asdfjoansdflknasdflaksndflkasndflkansdfdsd</p>
+    <h1 class="dos">Practica 02</h1>
+    <p>fsfs</p>
 </body>
 </html>
