--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1 class="dos">Practica 02</h1>
     <p>fsfs</p>
     <p>olvidado</p>
+    <h1>Ehercicio 03 finalizado</h1>
 </body>
 </html>
