Ejercicio 05. Finalizado y con estilo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <p>olvidado</p>
     <h1>Ehercicio 03 finalizado</h1>
     <h1>Ejercicio 04 finalizado</h1>
-    <h1>Ejercicio 05 finalizado</h1>
+    <h1 class="estilo">Ejercicio 05 finalizado.</h1>
 </body>
 </html>
