--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h1>Ehercicio 03 finalizado</h1>
     <h1>Ejercicio 04 finalizado</h1>
     <h1 class="estilo">Ejercicio 05 finalizado.</h1>
+    <h1>Ejercicio 08 finalizado</h1>
 </body>
 </html>
