--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <h1>Ejercicio 04 finalizado</h1>
     <h1 class="estilo">Ejercicio 05 finalizado.</h1>
     <h1>Ejercicio 08 finalizado</h1>
+    <h1>Apartado 40h_2</h1>
 </body>
 </html>
